2-k3s/10.observability/ingress/grafana-ingressroute.yaml
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.epaflix.com`)
      priority: 10
      middlewares:
        - name: security-headers
          namespace: traefik-system
        - name: authentik-forwardauth
          namespace: traefik-system
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    certResolver: cloudflare
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-outpost-https
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.epaflix.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - name: authentik-server
          namespace: app-authentik
          port: 80
  tls:
    certResolver: cloudflare
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: observability
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.epaflix.com`)
      middlewares:
        - name: redirect-https
          namespace: traefik-system
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
