2-k3s/10.observability/ingress/ntfy-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-internal
  namespace: observability
  labels:
    app: ntfy
    app.kubernetes.io/component: ingress
spec:
  entryPoints:
    - internal
  routes:
    - match: Host(`ntfy.epaflix.com`)
      kind: Rule
      services:
        - name: ntfy
          port: 8091
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
